-- What's new for 3.1.0.? (beta)

New Searches

* walmart - Search WalMart online.
* iep - Internet Encyclopedia of Philosophy (from Andrew Carpenter)
* sep - Stanford Encyclopedia of Philosophy (from Andrew Carpenter)
* encarta - Microsoft Encarta (from Andrew Carpenter)
* ep - Epinions (from Andrew Carpenter)

Modified Searches

* bible - David Thompson added switches for multiple translations


-- What's new for 3.1 (August 27, 2002)

New Searches

* acine - Search allocine.com, THE french site about movies, stars, theaters schedules, critics, trailers, etc...
* bq - Search Bartlett's Familiar Quotations at http://www.online-literature.com
* cp - search for CodeProject, a code sharing site (from Andreas Saurwein)
* dicit - Italian dictionary + Italian-English dictionary from Tom Creek
* dir - Get driving directions from one place to another (from Pete H).
* exp - Expedia (from Allen B. MacKenzie)
* fm - Freshmeat.net search from Brent Beardsley
* fv - FlightView search (from Allen B. MacKenzie)
* gfaq - GameFAQs.com from Casper Kvan Clausen
* guiasp - Find maps and addresses in Brazil; from Andrew Francis
* howfar - Find out how far it is from city to city (from John Bairen).
* hv - Rex Swain's HTTP Viewer; See exactly what an HTTP request returns to your browser
* infosec - search http://www.infosecuritymag.com/ for security information (from John Bairen)
* jdk - searches the Sun JDK
* law - FindLaw Law Library from John W. Bairen, Jr.
* newsau - Search for news topics at news.com.au, from Steve Lin
* nup - Nupedia (from Thad Kerosky)
* palm - PalmGear.com search (from Herman Fuchs)
* pg - Project Gutenberg/Public Domain book (pg) search (from Thad Kerosky)
* pinp - ServiceObjects' DOTS GeoPinpoint IP address Location converter (from Thad Kerosky)
* que - Interface with Queue (http://www.irondust.com/queue) from Nick Tornow
* rfc - search the Internet RFC/STD/FYI/BCP Archives (from Joey Lesh)
* rot13 - Glenn added a rot13 converter function