@@ -7,6 +7,7 @@ New Searches
 * sep - Stanford Encyclopedia of Philosophy (from Andrew Carpenter)
 * encarta - Microsoft Encarta (from Andrew Carpenter)
 * ep - Epinions (from Andrew Carpenter)
+* wc - Get the time around the world at timeanddate.com (from John Bairen)
 
 Modified Searches
 
